# OpenGL

3rd/glad/src/: glad.c
LearnOpenGL/: CMakeLists.txt  build.bat
LearnOpenGL/include/glad/: glad.h
LearnOpenGL/lib/: glfw3.lib
LearnOpenGL/shader/: test.fs
LearnOpenGL/src/: main.cpp  shader.h
LearnOpenGL/src/imgui/: gui.h
shader/: test.vs
